--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-VITE_API_URL=https://oppattach-backend.onrender.com
-VITE_GOOGLE_CLIENT_ID=1731673730-ebml4t9vlqbip8b9145113bpmu3fujtg.apps.googleusercontent.com
+# Backend API URL (dev: use proxy in vite.config; prod: set to your deployed backend)
+VITE_API_URL=http://localhost:5000
+
+# Google OAuth client ID (optional, for Sign in with Google)
+VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
