--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Backend API URL (dev: use proxy in vite.config; prod: set to your deployed backend)
 VITE_API_URL=http://localhost:5000
 
-# Google OAuth client ID (optional, for Sign in with Google)
+# Google OAuth client ID (for Sign in with Google)
 VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
